[tool.poetry]
name = "logto"
version = "0.1.1"
description = "Logto Python SDK."
authors = ["Silverhand Inc. <contact@silverhand.io>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = "^3.8.5"
pydantic = "^2.1.1"
pyjwt = { extras = ["crypto"], version = "^2.8.0" }

[tool.poetry.group.dev.dependencies]
flask = { extras = ["async"], version = "^2.3.2" }
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
python-dotenv = "^1.0.0"
black = "^23.7.0"

# Install poethepoet as a poetry plugin to enable the `poetry poe *` command.
pytest-mock = "^3.11.1"
pytest-asyncio = "^0.21.1"
[tool.poe.tasks]
test = { cmd = "pytest --cov --cov-report=term-missing" }
flask = { cmd = "flask --app samples.flask --debug run" }
black = { cmd = "black" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
branch = true
omit = ["*_test.py"]
source = ["logto"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
